# cpp-quick-start

./: .travis.yml  CMakeLists.txt  Dockerfile.clang10  Dockerfile.gcc10  README.md
cmake/: DockerBuild.cmake
src/: CMakeLists.txt
